# SPDX-FileCopyrightText: 2018 Free Software Foundation Europe e.V.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# Project config
[project]
name = "reuse-api"
description = "A badge API for REUSE"
version = "0.1.0"
authors = [ {name = "Carmen Bianca Bakker", email = "carmenbianca@fsfe.org"} ]
license = "GPL-3.0-or-later"

# build system config
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["reuse_api"]
include-package-data = true

# Tools config
[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)\
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
