# SPDX-FileCopyrightText: 2018 Free Software Foundation Europe e.V.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# Project config
[project]
name = "reuse-api"
description = "A badge API for REUSE"
version = "0.1.0"
authors = [ {name = "Carmen Bianca Bakker", email = "carmenbianca@fsfe.org"} ]
license = "GPL-3.0-or-later"

# build system config
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["reuse_api"]
script-files = [
  "bin/register.sh",
  "bin/update-entry.sh",
]
include-package-data = true

# Tools config
[tool.pytest.ini_options]
addopts = "-v" # see verbose output

## Ruff
[tool.ruff.lint]
#  See https://docs.astral.sh/ruff/rules/ for information
select = [
  # "ANN",   # Flake 8 type annotations
  # "A",     # prevent using keywords that clobber python builtins
  "ARG",   # Unused arguments
  "ASYNC", # Flake 8 aysnc
  # "B",     # bugbear: security warnings
  "C4",    # Comprehensions
  "E",     # pycodestyle
  "ERA",   # Commented out code
  "F",     # pyflakes
  "FURB",  # More upgrades to newer styles
  "G",     # Logging Formatting
  "I",     # ordered import
  "ISC",   # implicit string concatenation
  "LOG",   # Logging stuff
  "N",     # pep 8 naming
  "PERF",  # SOme performance stuff
  "PIE",   # Some extra checks
  "PL",    # Pylint
  "PT",    # Pytest style
  "Q",     # flake 8 quotes
  "RET",   # Return types
  "RSE",   # Unneeded exception parentheses
  # "RUF",   # the ruff developer's own rules
  "SIM",   # Simplify
  "T20",   # Warn about prints
  "TC",    # Type checking
  # "TRY",   # Error handling stuff
  "UP",    # Update syntax to newer versions
  "W",     # pycodestyle warnings
  "YTT",   # Flake 8 2020
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"] # incompatible with pytest style


[tool.ruff.lint.isort]
lines-after-imports = 2